--- a/forms/ui/mainform.ui
+++ b/forms/ui/mainform.ui
@@ -10,7 +10,7 @@
     <x>0</x>
     <y>0</y>
     <width>640</width>
-    <height>471</height>
+    <height>493</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -64,7 +64,7 @@
       <x>20</x>
       <y>50</y>
       <width>561</width>
-      <height>291</height>
+      <height>311</height>
      </rect>
     </property>
     <property name="title">
@@ -97,7 +97,7 @@
      <property name="geometry">
       <rect>
        <x>40</x>
-       <y>70</y>
+       <y>60</y>
        <width>211</width>
        <height>101</height>
       </rect>
@@ -155,8 +155,8 @@
     <widget class="QGroupBox" name="groupBox_small_sample">
      <property name="geometry">
       <rect>
-       <x>300</x>
-       <y>70</y>
+       <x>290</x>
+       <y>60</y>
        <width>211</width>
        <height>101</height>
       </rect>
@@ -214,8 +214,8 @@
     <widget class="QGroupBox" name="groupBox_4">
      <property name="geometry">
       <rect>
-       <x>170</x>
-       <y>190</y>
+       <x>290</x>
+       <y>180</y>
        <width>211</width>
        <height>80</height>
       </rect>
@@ -234,6 +234,65 @@
       </property>
      </widget>
     </widget>
+    <widget class="QGroupBox" name="groupBox_large_sample_2">
+     <property name="geometry">
+      <rect>
+       <x>40</x>
+       <y>180</y>
+       <width>211</width>
+       <height>101</height>
+      </rect>
+     </property>
+     <property name="title">
+      <string>Матрица коэффициента мью:</string>
+     </property>
+     <widget class="QLabel" name="label_9">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>61</y>
+        <width>71</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>RightBottom:</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_10">
+      <property name="geometry">
+       <rect>
+        <x>30</x>
+        <y>33</y>
+        <width>47</width>
+        <height>13</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>TopLeft:</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="lineEdit_top_left_4">
+      <property name="geometry">
+       <rect>
+        <x>90</x>
+        <y>30</y>
+        <width>113</width>
+        <height>20</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="lineEdit_right_bottom_3">
+      <property name="geometry">
+       <rect>
+        <x>90</x>
+        <y>60</y>
+        <width>113</width>
+        <height>20</height>
+       </rect>
+      </property>
+     </widget>
+    </widget>
    </widget>
    <widget class="QPushButton" name="btn_calc">
     <property name="enabled">
@@ -242,7 +301,7 @@
     <property name="geometry">
      <rect>
       <x>240</x>
-      <y>360</y>
+      <y>380</y>
       <width>141</width>
       <height>41</height>
      </rect>
